# assignment3-cloth-BradZhone-main

./: README.md
reference/: CMakeLists.txt
reference/include/cloth/: cloth.hpp
reference/include/render/: cloth.hpp
reference/res/shader/: cloth.fs  cloth.vs
reference/src/camera/: fpc.cpp
reference/src/cloth/: cloth.cpp
reference/src/render/: cloth.cpp
reference/src/shader/: shader.cpp
reference/test/: main.cpp
